2011-02-28  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Yury Semikhatsky.

        WebInspector: InspectorAgent calls offsetWidth in the middle of painting
        https://bugs.webkit.org/show_bug.cgi?id=54597

        * inspector/InspectorAgent.cpp:
        (WebCore::InspectorAgent::drawElementTitle):

Canonical link: https://commits.webkit.org/69767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79850 268f45cc-cd09-0410-ab3c-d52691b4dbfc